// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event.create multiple arguments: event 1`] = `
Array [
  Array [
    -2,
    "bar",
    Array [
      "foo",
    ],
  ],
  Array [
    -3,
    "bar",
    Array [
      "bar",
    ],
  ],
  Array [
    -2,
    "bar",
    Array [
      "baz",
    ],
  ],
]
`;

exports[`event.create multiple arguments: watch 1`] = `
Array [
  Array [
    Array [
      -2,
      "foo",
    ],
  ],
  Array [
    Array [
      -3,
      "bar",
    ],
  ],
  Array [
    Array [
      -2,
      "baz",
    ],
  ],
]
`;

exports[`event.create single argument: event 1`] = `
Array [
  Array [
    100,
    "foo",
    Array [],
  ],
  Array [
    200,
    "foo",
    Array [],
  ],
  Array [
    300,
    "foo",
    Array [],
  ],
]
`;

exports[`event.create single argument: watch 1`] = `
Array [
  Array [
    100,
  ],
  Array [
    200,
  ],
  Array [
    300,
  ],
]
`;
